# odoo-pre-commit-hooks

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: borrar.yml  github-actions.yml  test.yml
docs/: conf.py  dev.md  index.rst
docs/dev/: contributing.md  overview.md
docs/messages/: index.rst
oca_odoo_pre_commit_hooks/: checks_odoo_module.py  checks_rst.py
oca_pre_commit_hooks/: checks_odoo_module.py  checks_odoo_module_csv.py  checks_odoo_module_po.py  checks_odoo_module_xml.py  checks_rst.py  tools.py
pre_commit_hooks/: checks_odoo_module.py  checks_rst.py  tools.py
src/: checks_odoo_module.py  checks_rst.py
src/oca_pre_commit_hooks/: __main__.py  base_checker.py  check_unused_python_file.py  checks_odoo_files.py  checks_odoo_module.py  checks_odoo_module_csv.py  checks_odoo_module_fixit.py  checks_odoo_module_fixit_common.py  checks_odoo_module_po.py  checks_odoo_module_xml.py  cli.py  cli_file.py  cli_fixit.py  cli_po.py  global_parser.py  node_xml.py  utils.py  xml_position_parser.py
test_repo/broken_module/: README.md  __init__.py  __openerp__.py  all_comment.py  deprecated_disable.xml  model_view.xml  model_view_odoo2.xml  skip_file_no_used.xml  (+7 more)
tests/: __init__.py  common.py  test_check_unused_python_file.py  test_checks.py  test_checks_po.py  test_fixit.py  test_node_xml.py  test_pre_commit_hook.py  test_profiling.py
(+49 files in other folders)
