# [metadata]
# name = pre-commit-vauxoo-hooks
# description = Vauxoo hooks
# version = 0.1.0
# author = Vauxoo
# author_email = info@vauxoo.com
# license = AGPL-2.0
# url = https://vauxoo.com

# [options]
# packages = find:

# [options.entry_points]
# console_scripts =
#     print-arguments = print_arguments.main:main
